feat: add menu section

--- a/src/index.html
+++ b/src/index.html
@@ -82,11 +82,99 @@
               relax, unwind, and enjoy their time in comfort.
             </p>
             <div class="social-link-list">
-              <a href="#" class="social-link"><i class="fa-brands fa-facebook"></i></a>
-              <a href="#" class="social-link"><i class="fa-brands fa-instagram"></i></a>
-              <a href="#" class="social-link"><i class="fa-brands fa-x-twitter"></i></a>
+              <a href="#" class="social-link"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
+              <a href="#" class="social-link"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a href="#" class="social-link"
+                ><i class="fa-brands fa-x-twitter"></i
+              ></a>
             </div>
           </div>
+        </div>
+      </section>
+      <section class="menu-section">
+        <h2 class="section-title">Our Menu</h2>
+        <div class="section-content">
+          <ul class="menu-list">
+            <li class="menu-item">
+              <img
+                src="images/hot-beverages.png"
+                alt="Hot Beverages"
+                class="menu-image"
+              />
+              <div class="menu-details">
+                <h3 class="name">Hot Beverages</h3>
+                <p class="text">
+                  Wide range of Streaming hot coffee to make you fresh and
+                  light.
+                </p>
+              </div>
+            </li>
+            <li class="menu-item">
+              <img
+                src="images/cold-beverages.png"
+                alt="Cold Beverages"
+                class="menu-image"
+              />
+              <div class="menu-details">
+                <h3 class="name">Cold Beverages</h3>
+                <p class="text">
+                  Creamy and frothy cold coffee to make you cool.
+                </p>
+              </div>
+            </li>
+            <li class="menu-item">
+              <img
+                src="images/refreshment.png"
+                alt="Refreshment"
+                class="menu-image"
+              />
+              <div class="menu-details">
+                <h3 class="name">Refreshment</h3>
+                <p class="text">
+                  Fruit and icy refreshing drink to make feel refresh.
+                </p>
+              </div>
+            </li>
+            <li class="menu-item">
+              <img
+                src="images/special-combo.png"
+                alt="Special Combos"
+                class="menu-image"
+              />
+              <div class="menu-details">
+                <h3 class="name">Special Combos</h3>
+                <p class="text">
+                  Your favourite eating and drinking combations.
+                </p>
+              </div>
+            </li>
+            <li class="menu-item">
+              <img src="images/desserts.png" alt="Dessert" class="menu-image" />
+              <div class="menu-details">
+                <h3 class="name">Dessert</h3>
+                <p class="text">
+                  Satiate your palate and take you on a culinary treat.
+                </p>
+              </div>
+            </li>
+            <li class="menu-item">
+              <img
+                src="images/burger-frenchfries.png"
+                alt="Burger & French Fries"
+                class="menu-image"
+              />
+              <div class="menu-details">
+                <h3 class="name">Burger & French Fries</h3>
+                <p class="text">
+                  Quick bites to satisfy your small size hunger.
+                </p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
