--- a/src/index.html
+++ b/src/index.html
@@ -27,19 +27,19 @@
             <a href="#" class="nav-link">Home</a>
           </div>
           <div class="nav-item">
-            <a href="#" class="nav-link">About</a>
+            <a href="#about" class="nav-link">About</a>
           </div>
           <div class="nav-item">
-            <a href="#" class="nav-link">Menu</a>
+            <a href="#menu" class="nav-link">Menu</a>
           </div>
           <div class="nav-item">
-            <a href="#" class="nav-link">Testimonials</a>
+            <a href="#testimonials" class="nav-link">Testimonials</a>
           </div>
           <div class="nav-item">
-            <a href="#" class="nav-link">Gallery</a>
+            <a href="#gallery" class="nav-link">Gallery</a>
           </div>
           <div class="nav-item">
-            <a href="#" class="nav-link">Contact</a>
+            <a href="#contact" class="nav-link">Contact</a>
           </div>
         </ul>
         <button id="menu-open-button" class="fas fa-bars"></button>
@@ -71,7 +71,7 @@
           </div>
         </div>
       </section>
-      <section class="about-section">
+      <section class="about-section" id="about">
         <div class="section-content">
           <div class="about-image-wrapper">
             <img src="images/about-image.jpg" alt="About" class="about-image" />
@@ -79,9 +79,9 @@
           <div class="about-details">
             <h2 class="section-title">About Us</h2>
             <p class="text">
-              At Coffee House in Berndorf, Germany, we pride ourselves on being
-              a go-to destionation for coffee lovers and conversation seekers
-              alike. We're dedicated to providing an exceptional coffee
+              At Coffee House in Wilderness, California, we pride ourselves on
+              being a go-to destionation for coffee lovers and conversation
+              seekers alike. We're dedicated to providing an exceptional coffee
               experience in a cozy and inviting atmosphere, where guests can
               relax, unwind, and enjoy their time in comfort.
             </p>
@@ -99,7 +99,7 @@
           </div>
         </div>
       </section>
-      <section class="menu-section">
+      <section class="menu-section" id="menu">
         <h2 class="section-title">Our Menu</h2>
         <div class="section-content">
           <ul class="menu-list">
@@ -181,7 +181,7 @@
           </ul>
         </div>
       </section>
-      <section class="testimonials-section">
+      <section class="testimonials-section" id="testimonials">
         <h2 class="section-title">Testimonials</h2>
         <div class="section-content">
           <div class="slider-container swiper">
@@ -235,7 +235,7 @@
           </div>
         </div>
       </section>
-      <section class="gallery-section">
+      <section class="gallery-section" id="gallery">
         <h2 class="section-title">Gallery</h2>
         <div class="section-content">
           <ul class="gallery-list">
@@ -284,7 +284,7 @@
           </ul>
         </div>
       </section>
-      <section class="contact-section">
+      <section class="contact-section" id="contact">
         <h2 class="section-title">Contact Us</h2>
         <div class="section-content">
           <ul class="contact-info-list">
@@ -339,6 +339,29 @@
           </form>
         </div>
       </section>
+      <footer class="footer-section">
+        <div class="section-content">
+          <p class="copyright-text">© 2025 Coffee Shop</p>
+          <div class="social-link-list">
+            <div class="social-link-list">
+              <a href="#" class="social-link"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
+              <a href="#" class="social-link"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a href="#" class="social-link"
+                ><i class="fa-brands fa-x-twitter"></i
+              ></a>
+            </div>
+          </div>
+          <p class="policy-text">
+            <a href="#" class="policy-link">Privacy policy</a>
+            <span class="separator">&bull;</span>
+            <a href="#" class="policy-link">Refund policy</a>
+          </p>
+        </div>
+      </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
